# ml-project-scaffold

./: README.md
.github/: deploy-to-k8s.yml  upload-to-s3.yml
.github/workflows/: create_repo.yml  deploy-to-k8s.yml
KServe/: kserve.yml
Ray/: README.md  cronjob.yml  ray-job.yml
cookiecutter-template/: cookiecutter.json
cookiecutter-template/{{ cookiecutter.repo_name }}/: README.md
cookiecutter-template/{{ cookiecutter.repo_name }}/.github/workflows/: model_training.yml
cookiecutter-templates/: cookiecutter.json
cookiecutter-templates/{{ cookiecutter.repo_name }}/: LICENSE  Makefile  README.md  pyproject.toml
cookiecutter-templates/{{ cookiecutter.repo_name }}/.github/workflows/: cd.yml  ci.yml
cookiecutter-templates/{{ cookiecutter.repo_name }}/conf/: job_config.json
